# acoular_cpp

./: .gitignore  CMakeLists.txt  README.md
acoular_cpp/include/: Calib.h  ConvexHull.h  LinearNDInterpolator.h  configuration.h  environments.h  grids.h  h5cache.h  internal.h  log_status.h  microphones.h  ode.h  spectra.h  tools.h  tprocess.h  trajectory.h
acoular_cpp/src/: Calib.cpp  ConvexHull.cpp  LinearNDInterpolator.cpp  configuration.cpp  environments.cpp  grids.cpp  internal.cpp  microphones.cpp  ode.cpp  spectra.cpp  tools.cpp  tprocess.cpp  trajectory.cpp
docs/: Calib.md  ConvexHull.md  LinearNDInterpolator.md  README.md  configuration.md  environments.md  grids.md  ode.md  spectra.md  tools.md  tprocess.md  trajectory.md
examples/class_examples/Calib/: CMakeLists.txt  main.cpp
examples/class_examples/configuration/: CMakeLists.txt  main.cpp
examples/class_examples/grids/: CMakeLists.txt  main.cpp
examples/class_examples/microphones/: CMakeLists.txt  main.cpp
examples/class_examples/tools/: CMakeLists.txt  main.cpp
examples/example_cpp/: CMakeLists.txt  main.cpp
examples/example_eigen/: CMakeLists.txt  main.cpp
examples/example_gsl/: CMakeLists.txt  main.cpp
examples/example_log/: CMakeLists.txt
examples/example_spdlog/: CMakeLists.txt  main.cpp
